# asexec

./: .gitignore  CLAUDE.md  NORTH_STAR.md  README.md  ROADMAP.md  prd.md  pyproject.toml
.github/workflows/: ci.yml
src/asexec/: __init__.py  canonical.py  cli.py  drand.py  errors.py  hashing.py  identity.py  keys.py  manifest.py  roughtime.py  verifier.py
tests/: conftest.py  test_drand.py  test_identity.py  test_manifest.py  test_primitives.py  test_roughtime.py  test_verifier.py
